--- a/ThermalRender/ThermalRender/ThermalRender.vcxproj.filters
+++ b/ThermalRender/ThermalRender/ThermalRender.vcxproj.filters
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Render.cuh" />
+    <ClInclude Include="Camera.cuh" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="Render.cu" />
