--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 *.user
 *.userosscache
 *.sln.docstates
+
 output/
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -65,6 +67,8 @@ artifacts/
 # StyleCop
 StyleCopReport.xml
 
+
+
 # Files built by Visual Studio
 *_i.c
 *_p.c
@@ -93,6 +97,8 @@ StyleCopReport.xml
 *.pidb
 *.svclog
 *.scc
+
+!ThermalRender/ThermalRender/asset/model/*.obj
 
 # Chutzpah Test files
 _Chutzpah*
